# prideflag

./: .pre-commit-config.yaml  CONTRIBUTING.md  Cargo.toml  README.md  htmlcolors.rs  prideflag  setup.cfg
.github/: CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: dev.md  flags.md  index.md
src/: colors.rs  flags.rs  main.rs
src/prideflag/: __main__.py  cli.py  colors.py  flag.py  pride.py
