[metadata]
name = prideflag
version = 0.1.0
description = Print pride flags in the terminal.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/qexat/prideflag
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src
